single run example edits

--- a/examples/run_TGLFNN.ipynb
+++ b/examples/run_TGLFNN.ipynb
@@ -10,21 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "id": "85459ea5-c90f-4bd5-8099-2f0de4936792",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#using Pkg\n",
-    "#Pkg.activate(\"../../FUSE\")\n",
     "using TGLFNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "id": "15e33071-cf8c-41c2-a0e9-73367086579d",
    "metadata": {
     "tags": []
@@ -36,183 +34,101 @@
     "tmpdir = mktempdir()\n",
     "filepath = joinpath(tmpdir, \"input.tglf\")\n",
     "input_tglf_lines = \"\"\"\n",
-    "'GYRO'  UNITS\n",
-    ".true.  USE_TRANSPORT_MODEL\n",
-    "1  GEOMETRY_FLAG\n",
-    "0  WRITE_WAVEFUNCTION_FLAG\n",
-    "-1  SIGN_BT\n",
-    "1  SIGN_IT\n",
-    "0.7  THETA_TRAPPED\n",
-    "0.0  WDIA_TRAPPED\n",
-    "1.0  PARK\n",
-    "1.0  GHAT\n",
-    "1.0  GCHAT\n",
-    "0.1  WD_ZERO\n",
-    "0.0  LINSKER_FACTOR\n",
-    "0.0  GRADB_FACTOR\n",
-    "2.0  FILTER\n",
-    "0.0  DAMP_PSI\n",
-    "0.0  DAMP_SIG\n",
-    ".true.  IFLUX\n",
-    ".false.  USE_BPER\n",
-    ".false.  USE_BPAR\n",
-    ".false.  USE_MHD_RULE\n",
-    ".true.  USE_BISECTION\n",
-    ".false.  USE_INBOARD_DETRAPPED\n",
-    "-1  IBRANCH\n",
-    "2  NMODES\n",
-    "6  NBASIS_MAX\n",
-    "2  NBASIS_MIN\n",
-    "16  NXGRID\n",
-    "12  NKY\n",
-    ".false.  USE_AVE_ION_GRID\n",
-    ".false.  ADIABATIC_ELEC\n",
-    "0.0  ALPHA_MACH\n",
-    "1.0  ALPHA_E\n",
-    "1.0  ALPHA_P\n",
-    "0  ALPHA_QUENCH\n",
-    "-1.0  ALPHA_ZF\n",
-    "1.0  XNU_FACTOR\n",
-    "1.0  DEBYE_FACTOR\n",
-    "1.25  ETG_FACTOR\n",
-    "18.0  RLNP_CUTOFF\n",
-    "3  SAT_RULE\n",
-    "4  KYGRID_MODEL\n",
-    "2  XNU_MODEL\n",
-    "0  VPAR_MODEL\n",
-    "1  VPAR_SHEAR_MODEL\n",
-    "3  NS\n",
-    "0.000272445  MASS_1\n",
-    "1.0  MASS_2\n",
-    "6.0  MASS_3\n",
-    "0.0  MASS_4\n",
-    "0.0  MASS_5\n",
-    "0.0  MASS_6\n",
-    "0.0  MASS_7\n",
-    "-1.0  ZS_1\n",
-    "1.0  ZS_2\n",
-    "6.0  ZS_3\n",
-    "0.0  ZS_4\n",
-    "0.0  ZS_5\n",
-    "0.0  ZS_6\n",
-    "0.0  ZS_7\n",
-    "0.3  KY\n",
-    "1.65  WIDTH\n",
-    "0.3  WIDTH_MIN\n",
-    "21  NWIDTH\n",
-    ".true.  FIND_WIDTH\n",
-    "0.513787  RLNS_1\n",
-    "0.758616  RLNS_2\n",
-    "-0.872531  RLNS_3\n",
-    "0.0  RLNS_4\n",
-    "0.0  RLNS_5\n",
-    "0.0  RLNS_6\n",
-    "0.0  RLNS_7\n",
-    "2.03987  RLTS_1\n",
-    "2.20153  RLTS_2\n",
-    "2.20153  RLTS_3\n",
-    "0.0  RLTS_4\n",
-    "0.0  RLTS_5\n",
-    "0.0  RLTS_6\n",
-    "0.0  RLTS_7\n",
-    "0.803536  VPAR_SHEAR_1\n",
-    "0.803536  VPAR_SHEAR_2\n",
-    "0.803536  VPAR_SHEAR_3\n",
-    "0.0  VPAR_SHEAR_4\n",
-    "0.0  VPAR_SHEAR_5\n",
-    "0.0  VPAR_SHEAR_6\n",
-    "0.0  VPAR_SHEAR_7\n",
-    "0.080234  VEXB_SHEAR\n",
-    "0.0  VNS_SHEAR_1\n",
-    "0.0  VNS_SHEAR_2\n",
-    "0.0  VNS_SHEAR_3\n",
-    "0.0  VNS_SHEAR_4\n",
-    "0.0  VNS_SHEAR_5\n",
-    "0.0  VNS_SHEAR_6\n",
-    "0.0  VNS_SHEAR_7\n",
-    "0.0  VTS_SHEAR_1\n",
-    "0.0  VTS_SHEAR_2\n",
-    "0.0  VTS_SHEAR_3\n",
-    "0.0  VTS_SHEAR_4\n",
-    "0.0  VTS_SHEAR_5\n",
-    "0.0  VTS_SHEAR_6\n",
-    "0.0  VTS_SHEAR_7\n",
-    "1.0  TAUS_1\n",
-    "1.39296  TAUS_2\n",
-    "1.39296  TAUS_3\n",
-    "0.0  TAUS_4\n",
-    "0.0  TAUS_5\n",
-    "0.0  TAUS_6\n",
-    "0.0  TAUS_7\n",
-    "1.0  AS_1\n",
-    "0.784867  AS_2\n",
-    "0.0302081  AS_3\n",
-    "0.0  AS_4\n",
-    "0.0  AS_5\n",
-    "0.0  AS_6\n",
-    "0.0  AS_7\n",
-    "0.419061  VPAR_1\n",
-    "0.419061  VPAR_2\n",
-    "0.419061  VPAR_3\n",
-    "0.0  VPAR_4\n",
-    "0.0  VPAR_5\n",
-    "0.0  VPAR_6\n",
-    "0.0  VPAR_7\n",
-    "0.0  VEXB\n",
-    "0.00362972  BETAE\n",
-    "0.0948099  XNUE\n",
-    "1.90624  ZEFF\n",
-    "0.0217677  DEBYE\n",
-    ".true.  NEW_EIKONAL\n",
-    "0.573129  RMIN_SA\n",
-    "2.86212  RMAJ_SA\n",
-    "2.00545  Q_SA\n",
-    "1.20834  SHAT_SA\n",
-    "0.293804  ALPHA_SA\n",
-    "0.0  XWELL_SA\n",
-    "0.0  THETA0_SA\n",
-    "0  B_MODEL_SA\n",
-    "1  FT_MODEL_SA\n",
-    "0.573129  RMIN_LOC\n",
-    "2.86212  RMAJ_LOC\n",
-    "-0.0576768  ZMAJ_LOC\n",
-    "1.0  DRMINDX_LOC\n",
-    "-0.189065  DRMAJDX_LOC\n",
-    "0.00278328  DZMAJDX_LOC\n",
-    "1.40438  KAPPA_LOC\n",
-    "0.125574  S_KAPPA_LOC\n",
-    "0.0681444  DELTA_LOC\n",
-    "0.116297  S_DELTA_LOC\n",
-    "-0.0148888  ZETA_LOC\n",
-    "-0.0258657  S_ZETA_LOC\n",
-    "0.0  SHAPE_COS0\n",
-    "0.0  SHAPE_S_COS0\n",
-    "0.0  SHAPE_COS1\n",
-    "0.0  SHAPE_S_COS1\n",
-    "0.0  SHAPE_COS2\n",
-    "0.0  SHAPE_S_COS2\n",
-    "0.0  SHAPE_COS3\n",
-    "0.0  SHAPE_S_COS3\n",
-    "0.0  SHAPE_COS4\n",
-    "0.0  SHAPE_S_COS4\n",
-    "0.0  SHAPE_COS5\n",
-    "0.0  SHAPE_S_COS5\n",
-    "0.0  SHAPE_COS6\n",
-    "0.0  SHAPE_S_COS6\n",
-    "0.0  SHAPE_SIN3\n",
-    "0.0  SHAPE_S_SIN3\n",
-    "0.0  SHAPE_SIN4\n",
-    "0.0  SHAPE_S_SIN4\n",
-    "0.0  SHAPE_SIN5\n",
-    "0.0  SHAPE_S_SIN5\n",
-    "0.0  SHAPE_SIN6\n",
-    "0.0  SHAPE_S_SIN6\n",
-    "2.00545  Q_LOC\n",
-    "14.7947  Q_PRIME_LOC\n",
-    "-0.00355359  P_PRIME_LOC\n",
-    "0.0  BETA_LOC\n",
-    "0.0  KX0_LOC\n",
-    "-1.0  NN_MAX_ERROR\n",
+    "ADIABATIC_ELEC = false\n",
+    "ALPHA_E = 1.0\n",
+    "ALPHA_MACH = 0.0\n",
+    "ALPHA_P = 1.0\n",
+    "ALPHA_QUENCH = 0\n",
+    "ALPHA_ZF = -1.0\n",
+    "AS_1 = 1.0\n",
+    "AS_2 = 0.784867\n",
+    "AS_3 = 0.0302081\n",
+    "BETAE = 0.00362972\n",
+    "BETA_LOC = 0.0\n",
+    "DAMP_PSI = 0.0\n",
+    "DAMP_SIG = 0.0\n",
+    "DEBYE = 0.0217677\n",
+    "DEBYE_FACTOR = 1.0\n",
+    "DELTA_LOC = 0.0681444\n",
+    "DRMAJDX_LOC = -0.189065\n",
+    "DRMINDX_LOC = 1.0\n",
+    "DZMAJDX_LOC = 0.00278328\n",
+    "ETG_FACTOR = 1.25\n",
+    "FILTER = 2.0\n",
+    "FIND_WIDTH = true\n",
+    "GCHAT = 1.0\n",
+    "GHAT = 1.0\n",
+    "GRADB_FACTOR = 0.0\n",
+    "IBRANCH = -1\n",
+    "IFLUX = true\n",
+    "KAPPA_LOC = 1.40438\n",
+    "KX0_LOC = 0.0\n",
+    "KY = 0.3\n",
+    "KYGRID_MODEL = 4\n",
+    "LINSKER_FACTOR = 0.0\n",
+    "MASS_1 = 0.000272445\n",
+    "MASS_2 = 1.0\n",
+    "MASS_3 = 6.0\n",
+    "NBASIS_MAX = 6\n",
+    "NBASIS_MIN = 2\n",
+    "NEW_EIKONAL = true\n",
+    "NKY = 12\n",
+    "NMODES = 2\n",
+    "NS = 3\n",
+    "NWIDTH = 21\n",
+    "NXGRID = 16\n",
+    "PARK = 1.0\n",
+    "P_PRIME_LOC = -0.00355359\n",
+    "Q_LOC = 2.00545\n",
+    "Q_PRIME_LOC = 14.7947\n",
+    "RLNP_CUTOFF = 18.0\n",
+    "RLNS_1 = 0.513787\n",
+    "RLNS_2 = 0.758616\n",
+    "RLNS_3 = -0.872531\n",
+    "RLTS_1 = 2.03987\n",
+    "RLTS_2 = 2.20153\n",
+    "RLTS_3 = 2.20153\n",
+    "RMAJ_LOC = 2.86212\n",
+    "RMIN_LOC = 0.573129\n",
+    "SAT_RULE = 3\n",
+    "SIGN_BT = -1\n",
+    "SIGN_IT = 1\n",
+    "S_DELTA_LOC = 0.116297\n",
+    "S_KAPPA_LOC = 0.125574\n",
+    "S_ZETA_LOC = -0.0258657\n",
+    "TAUS_1 = 1.0\n",
+    "TAUS_2 = 1.39296\n",
+    "TAUS_3 = 1.39296\n",
+    "THETA_TRAPPED = 0.7\n",
+    "UNITS = 'GYRO'\n",
+    "USE_AVE_ION_GRID = false\n",
+    "USE_BISECTION = true\n",
+    "USE_BPAR = true\n",
+    "USE_BPER = true\n",
+    "USE_INBOARD_DETRAPPED = false\n",
+    "USE_MHD_RULE = false\n",
+    "VEXB_SHEAR = 0.080234\n",
+    "VPAR_1 = 0.419061\n",
+    "VPAR_2 = 0.419061\n",
+    "VPAR_3 = 0.419061\n",
+    "VPAR_MODEL = 0\n",
+    "VPAR_SHEAR_1 = 0.803536\n",
+    "VPAR_SHEAR_2 = 0.803536\n",
+    "VPAR_SHEAR_3 = 0.803536\n",
+    "VPAR_SHEAR_MODEL = 1\n",
+    "WDIA_TRAPPED = 1.0\n",
+    "WD_ZERO = 0.1\n",
+    "WIDTH = 1.65\n",
+    "WIDTH_MIN = 0.3\n",
+    "XNUE = 0.0948099\n",
+    "XNU_FACTOR = 1.0\n",
+    "XNU_MODEL = 3\n",
+    "ZEFF = 1.90624\n",
+    "ZETA_LOC = -0.0148888\n",
+    "ZMAJ_LOC = -0.0576768\n",
+    "ZS_1 = -1.0\n",
+    "ZS_2 = 1.0\n",
+    "ZS_3 = 6.0\n",
     "\"\"\";\n",
     "open(filepath, \"w\") do f\n",
     "    write(f, input_tglf_lines)\n",
@@ -229,8 +145,16 @@
    "outputs": [],
    "source": [
     "# lets load the input.tglf file\n",
-    "\n",
-    "input_tglf = TGLFNN.load(InputTGLF(),filepath)"
+    "input_tglf = TGLFNN.load(InputTGLF(),filepath);\n",
+    "# Ensure TJLF runs with the same parameters hardcoded in TGLF\n",
+    "if input_tglf.SAT_RULE == 2 || input_tglf.SAT_RULE == 3\n",
+    "    input_tglf.XNU_MODEL = 3\n",
+    "    input_tglf.WDIA_TRAPPED = 1.0\n",
+    "else\n",
+    "    input_tglf.XNU_MODEL = 2\n",
+    "    input_tglf.WDIA_TRAPPED = 0.0\n",
+    "end\n",
+    "input_tglf "
    ]
   },
   {
@@ -265,6 +189,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fb2256b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare with full TGLF\n",
+    "TGLFNN.run_tglf(input_tglf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "35dc96bd-efcd-47fc-8b91-d9b13da660b6",
    "metadata": {
     "tags": []
@@ -273,20 +208,6 @@
    "source": [
     "# compare with full TJLF\n",
     "TGLFNN.run_tjlf(input_tglf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03118bb5-42f2-40ac-b71d-d2c7a4195339",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# compare with full TGLF\n",
-    "# Warning: If there are large differences compared to TJLF, then the input.tglf was not generated properly and Fortran TGLF will default to using SAT0 ES\n",
-    "TGLFNN.run_tglf(input_tglf)"
    ]
   },
   {
