--- a/examples/run_TGLFNN.ipynb
+++ b/examples/run_TGLFNN.ipynb
@@ -10,19 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "85459ea5-c90f-4bd5-8099-2f0de4936792",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "using TGLFNN"
+    "# using Pkg\n",
+    "# Pkg.activate(\"../../FUSE\")\n",
+    "using TurbulentTransport"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "15e33071-cf8c-41c2-a0e9-73367086579d",
    "metadata": {
     "tags": []
@@ -34,7 +36,7 @@
     "tmpdir = mktempdir()\n",
     "filepath = joinpath(tmpdir, \"input.tglf\")\n",
     "input_tglf_lines = \"\"\"\n",
-    "ADIABATIC_ELEC = false\n",
+    "ADIABATIC_ELEC = .false.\n",
     "ALPHA_E = 1.0\n",
     "ALPHA_MACH = 0.0\n",
     "ALPHA_P = 1.0\n",
@@ -55,12 +57,12 @@
     "DZMAJDX_LOC = 0.00278328\n",
     "ETG_FACTOR = 1.25\n",
     "FILTER = 2.0\n",
-    "FIND_WIDTH = true\n",
+    "FIND_WIDTH = .true.\n",
     "GCHAT = 1.0\n",
     "GHAT = 1.0\n",
     "GRADB_FACTOR = 0.0\n",
     "IBRANCH = -1\n",
-    "IFLUX = true\n",
+    "IFLUX = .true.\n",
     "KAPPA_LOC = 1.40438\n",
     "KX0_LOC = 0.0\n",
     "KY = 0.3\n",
@@ -71,7 +73,7 @@
     "MASS_3 = 6.0\n",
     "NBASIS_MAX = 6\n",
     "NBASIS_MIN = 2\n",
-    "NEW_EIKONAL = true\n",
+    "NEW_EIKONAL = .true.\n",
     "NKY = 12\n",
     "NMODES = 2\n",
     "NS = 3\n",
@@ -101,12 +103,12 @@
     "TAUS_3 = 1.39296\n",
     "THETA_TRAPPED = 0.7\n",
     "UNITS = 'GYRO'\n",
-    "USE_AVE_ION_GRID = false\n",
-    "USE_BISECTION = true\n",
-    "USE_BPAR = true\n",
-    "USE_BPER = true\n",
-    "USE_INBOARD_DETRAPPED = false\n",
-    "USE_MHD_RULE = false\n",
+    "USE_AVE_ION_GRID = .false.\n",
+    "USE_BISECTION = .true.\n",
+    "USE_BPAR = .true.\n",
+    "USE_BPER = .true.\n",
+    "USE_INBOARD_DETRAPPED = .false.\n",
+    "USE_MHD_RULE = .false.\n",
     "VEXB_SHEAR = 0.080234\n",
     "VPAR_1 = 0.419061\n",
     "VPAR_2 = 0.419061\n",
@@ -145,15 +147,24 @@
    "outputs": [],
    "source": [
     "# lets load the input.tglf file\n",
-    "input_tglf = TGLFNN.load(InputTGLF(),filepath);\n",
-    "# Ensure TJLF runs with the same parameters hardcoded in TGLF\n",
+    "input_tglf = TurbulentTransport.load(InputTGLF(),filepath);\n",
+    "# Ensure TJLF runs with the same parameters in TGLF for USE_PRESETS=.true.\n",
     "if input_tglf.SAT_RULE == 2 || input_tglf.SAT_RULE == 3\n",
     "    input_tglf.XNU_MODEL = 3\n",
     "    input_tglf.WDIA_TRAPPED = 1.0\n",
-    "else\n",
+    "    if input_tglf.UNITS == \"'GYRO'\"\n",
+    "        input_tglf.UNITS = \"'CGYRO'\"\n",
+    "    end\n",
+    "elseif input_tglf.SAT_RULE == 1\n",
     "    input_tglf.XNU_MODEL = 2\n",
-    "    input_tglf.WDIA_TRAPPED = 0.0\n",
+    "elseif input_tglf.SAT_RULE == 0\n",
+    "    input_tglf.UNITS = \"'GYRO'\"\n",
+    "    input_tglf.XNU_MODEL = 2\n",
+    "    if input_tglf.NMODES > 2\n",
+    "        input_tglf.NMODES = 4\n",
+    "    end\n",
     "end\n",
+    "\n",
     "input_tglf "
    ]
   },
@@ -168,7 +179,7 @@
    "source": [
     "# get a list of available models\n",
     "\n",
-    "for model in TGLFNN.available_models()\n",
+    "for model in TurbulentTransport.available_models()\n",
     "    println(model)\n",
     "end"
    ]
@@ -183,7 +194,7 @@
    "outputs": [],
    "source": [
     "# run TGLF-NN\n",
-    "TGLFNN.run_tglfnn(input_tglf; model_filename=\"sat3_em_d3d_azf-1\", warn_nn_train_bounds=true)"
+    "TurbulentTransport.run_tglfnn(input_tglf; model_filename=\"sat3_em_d3d_azf-1\", warn_nn_train_bounds=true)"
    ]
   },
   {
@@ -194,7 +205,7 @@
    "outputs": [],
    "source": [
     "# compare with full TGLF\n",
-    "TGLFNN.run_tglf(input_tglf)"
+    "TurbulentTransport.run_tglf(input_tglf)"
    ]
   },
   {
@@ -207,7 +218,7 @@
    "outputs": [],
    "source": [
     "# compare with full TJLF\n",
-    "TGLFNN.run_tjlf(input_tglf)"
+    "TurbulentTransport.run_tjlf(input_tglf)"
    ]
   },
   {
@@ -218,7 +229,7 @@
    "outputs": [],
    "source": [
     "# run GKNN\n",
-    "TGLFNN.run_tglfnn(input_tglf; model_filename=\"sat3_em_d3d_azf-1\", warn_nn_train_bounds=true, fidelity=:GKNN)"
+    "TurbulentTransport.run_tglfnn(input_tglf; model_filename=\"sat3_em_d3d_azf-1\", warn_nn_train_bounds=true, fidelity=:GKNN)"
    ]
   }
  ],
