--- a/examples/run_TGLFNN.ipynb
+++ b/examples/run_TGLFNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "85459ea5-c90f-4bd5-8099-2f0de4936792",
    "metadata": {
     "tags": []
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "15e33071-cf8c-41c2-a0e9-73367086579d",
    "metadata": {
     "tags": []
@@ -149,23 +149,7 @@
     "# lets load the input.tglf file\n",
     "input_tglf = TurbulentTransport.load(InputTGLF(),filepath);\n",
     "# Ensure TJLF runs with the same parameters in TGLF for USE_PRESETS=.true.\n",
-    "if input_tglf.SAT_RULE == 2 || input_tglf.SAT_RULE == 3\n",
-    "    input_tglf.XNU_MODEL = 3\n",
-    "    input_tglf.WDIA_TRAPPED = 1.0\n",
-    "    if input_tglf.UNITS == \"'GYRO'\"\n",
-    "        input_tglf.UNITS = \"'CGYRO'\"\n",
-    "    end\n",
-    "elseif input_tglf.SAT_RULE == 1\n",
-    "    input_tglf.XNU_MODEL = 2\n",
-    "elseif input_tglf.SAT_RULE == 0\n",
-    "    input_tglf.UNITS = \"'GYRO'\"\n",
-    "    input_tglf.XNU_MODEL = 2\n",
-    "    if input_tglf.NMODES > 2\n",
-    "        input_tglf.NMODES = 4\n",
-    "    end\n",
-    "end\n",
-    "\n",
-    "input_tglf "
+    "TurbulentTransport.apply_presets!(input_tglf)"
    ]
   },
   {
