--- a/examples/spot_check.ipynb
+++ b/examples/spot_check.ipynb
@@ -6,12 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg\n",
-    "Pkg.activate(\"..\")\n",
-    "using TGLFNN\n",
+    "#using Pkg\n",
+    "#Pkg.activate(\"../../FUSE\")\n",
+    "using TurbulentTransport\n",
     "using Plots\n",
-    "using Measurements\n",
-    "\n",
+    "using Measurements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filename = \"sat3_em_d3d_azf-1.bson\"\n",
     "fname = split(filename, \".\")[1]\n",
     "model_dir = \"../models/$fname\"\n",
@@ -20,7 +27,7 @@
     "end\n",
     "\n",
     "# Extract flux models and xnames\n",
-    "ensemble = TGLFNN.loadmodelonce(filename)\n",
+    "ensemble = TurbulentTransport.loadmodelonce(filename)\n",
     "fluxmodels = [model.fluxmodel for model in ensemble.models]\n",
     "xnames = ensemble.models[1].xnames\n",
     "ynames = ensemble.models[1].ynames\n",
@@ -82,32 +89,24 @@
     "# Initialize a list to store each subplot\n",
     "plots = []\n",
     "\n",
-    "for yi in 1:4\n",
-    "    if yi != 1\n",
-    "        continue\n",
-    "    end\n",
-    "    for xi in 1:length(xnames)\n",
-    "        y = ensemble(delog10(x, xnames); warn_nn_train_bounds=false, uncertain=true)\n",
+    "yi = 4  # 1: Gamma_e, 2: Pi_e, 3: Q_e, 4: Q_i\n",
     "\n",
-    "        if yi==4\n",
-    "            ylbl = ynames[yi] == \"OUT_Q_elec\" ? \"Q_e [gB]\" : ynames[yi]\n",
-    "        elseif yi==2\n",
-    "            ylbl = ynames[yi] == \"OUT_P_ions\" ? \"Pi_i\" * \" [gB]\" : ynames[yi]\n",
-    "        end\n",
+    "for xi in 1:length(xnames)\n",
+    "    y = ensemble(delog10(x, xnames); warn_nn_train_bounds=false, uncertain=true)\n",
     "\n",
-    "        xrange = LinRange(x[xi] - 3.3 * xσ[xi], x[xi] + 3.3 * xσ[xi], 10)\n",
-    "        \n",
-    "        tmp = f(ensemble, xrange, xi)[yi, :]\n",
+    "    xrange = LinRange(x[xi] - 3.3 * xσ[xi], x[xi] + 3.3 * xσ[xi], 100)\n",
+    "    \n",
+    "    tmp = f(ensemble, xrange, xi)[yi, :]\n",
     "\n",
-    "        p = plot(xrange, Measurements.value.(tmp), ribbon=Measurements.uncertainty.(tmp),\n",
-    "                 xlabel=xnames[xi], ylabel=\"\", label=\"\", linewidth=2, color=:red)\n",
-    "        scatter!([x[xi]], [y[yi]], color=:blue, label=\"\")\n",
-    "        vline!([xm[xi]], color=:black, linestyle=:dash, label=\"\")\n",
-    "        hline!([0], color=:black, linestyle=:solid, label=\"\")\n",
+    "    p = plot(xrange, Measurements.value.(tmp), ribbon=Measurements.uncertainty.(tmp),\n",
+    "                xlabel=xnames[xi], ylabel=\"\", label=\"\", linewidth=2, color=:red)\n",
+    "    scatter!([x[xi]], [y[yi]], color=:blue, label=\"\")\n",
+    "    vline!([xm[xi]], color=:black, linestyle=:dash, label=\"\")\n",
+    "    hline!([0], color=:black, linestyle=:solid, label=\"\")\n",
     "\n",
-    "        push!(plots, p)\n",
-    "    end\n",
+    "    push!(plots, p)\n",
     "end\n",
+    "\n",
     "\n",
     "# Arrange all plots in a tile layout\n",
     "n_cols = 6\n",
@@ -115,13 +114,20 @@
     "plot_grid = plot(plots..., layout=(n_rows, n_cols), size=(1000, 800))\n",
     "\n",
     "display(plot_grid)\n",
-    "savefig(plot_grid, \"./plot_spot_check_$(split(filename,\".\")[1]).pdf\")"
+    "savefig(plot_grid, \"./plot_spot_check_$(split(filename,\".\")[1])_$(ynames[yi]).pdf\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.4",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -129,7 +135,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.4"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
