--- a/utilities/convert_nn.ipynb
+++ b/utilities/convert_nn.ipynb
@@ -7,23 +7,23 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\"..\")\n",
+    "Pkg.activate(\"../../FUSE\")\n",
     "#Pkg.instantiate()\n",
     "#Pkg.resolve()\n",
     "#Pkg.update()\n",
-    "using TGLFNN\n",
+    "using TurbulentTransport\n",
     "using ONNXNaiveNASflux\n",
     "using Flux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export Julia trained model to ONNX format\n",
-    "filename = \"sat2_em_d3d+mastu+nstx_azf-1.bson\"\n",
+    "filename = \"sat3_em_d3d_azf-1.bson\"\n",
     "fname = split(filename, \".\")[1]\n",
     "model_dir = \"../models/$fname\"\n",
     "if !isdir(model_dir)\n",
@@ -31,7 +31,7 @@
     "end\n",
     "\n",
     "# Extract flux models and xnames\n",
-    "ensemble = TGLFNN.loadmodelonce(filename)\n",
+    "ensemble = TurbulentTransport.loadmodelonce(filename)\n",
     "fluxmodels = [model.fluxmodel for model in ensemble.models]\n",
     "fluxmodels_f32 = [f32(model) for model in fluxmodels]\n",
     "\n",
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import ONNX format model to Julia\n",
     "using ONNXNaiveNASflux\n",
-    "using TGLFNN\n",
+    "using TurbulentTransport\n",
     "\n",
     "# Define the directory where ONNX models and normalization parameters are saved\n",
     "filename = \"sat3_em_mastu_azf-1.bson\"\n",
@@ -150,10 +150,10 @@
     "end\n",
     "\n",
     "# Will want to create an ensemble using the loaded ONNX models and the loaded normalization parameters [not yet implemented]\n",
-    "# ensemble_reloaded = TGLFNN.flux_to_tglfnn(loaded_fluxmodels, \"sat2_em_ukstep_azf-1\", xnames, ynames, xm, xσ, ym, yσ, xbounds, ybounds)\n",
+    "# ensemble_reloaded = TurbulentTransport.flux_to_tglfnn(loaded_fluxmodels, \"sat2_em_ukstep_azf-1\", xnames, ynames, xm, xσ, ym, yσ, xbounds, ybounds)\n",
     "\n",
     "# Will want to save the loaded onnx ensemble model [not yet implemented]\n",
-    "# TGLFNN.savemodel(ensemble_reloaded, \"$model_dir/sat2_em_ukstep_azf-1\")"
+    "# TGLFTurbulentTransportNN.savemodel(ensemble_reloaded, \"$model_dir/sat2_em_ukstep_azf-1\")"
    ]
   },
   {
@@ -170,7 +170,7 @@
     "#Pkg.update()\n",
     "using Test\n",
     "using ONNXNaiveNASflux\n",
-    "using TGLFNN\n",
+    "using TurbulentTransport\n",
     "\n",
     "# Define the directory where ONNX models and normalization parameters are saved\n",
     "filename = \"sat1geo_em_nstx_azf-1.bson\"\n",
@@ -213,7 +213,7 @@
     ")\n",
     "\n",
     "# Load Julia model\n",
-    "ensemble = TGLFNN.loadmodelonce(filename)\n",
+    "ensemble = TurbulentTransport.loadmodelonce(filename)\n",
     "\n",
     "# Load ONNX model\n",
     "loaded_fluxmodels = []\n",
@@ -243,11 +243,18 @@
     "    println(@test y ≈ y_onnx)\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.4",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -255,7 +262,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.4"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
